JS for job board created

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,14 @@
 node_modules/*
 .DS_Store
+mainpage.css.map
+talentpage.css.map
+jobpage.css.map
+shared.css.map
+footer.css.map
+company.css.map
+
+
+
+
+
+
